Profile: uneven icons fixed

--- a/src/styles/Profile.module.css
+++ b/src/styles/Profile.module.css
@@ -95,6 +95,7 @@
 .field {
   display: flex;
   gap: 20px;
+  width: 100%;
 }
 
 .field div p {
